// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders and matches with snaphot while loggedin user 1`] = `
<DocumentFragment>
  <nav
    class="Navbar navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      <span
        class="brand-text"
      >
        Book Chat
      </span>
    </a>
    <ul
      class="navbar-nav ml-auto d-flex flex-row"
    >
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/reviews"
        >
          Reviews
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/books"
        >
          Books
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/chats"
        >
          Chats
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault avatar css-2s90m6-MuiAvatar-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-10mi8st-MuiSvgIcon-root-MuiAvatar-fallback"
            data-testid="PersonIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`it renders and matches with snaphot while no user loggedin 1`] = `
<DocumentFragment>
  <nav
    class="Navbar navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      <span
        class="brand-text"
      >
        Book Chat
      </span>
    </a>
    <ul
      class="navbar-nav ml-auto d-flex flex-row"
    >
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/login"
        >
          Login
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/signup"
        >
          Sign Up
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
